# aiomcp-catalog

./: README.md
projects/aiomcp-server-time/: pyproject.toml
projects/aiomcp-server-time/src/aiomcp_server_time/: __main__.py  server.py
projects/aiomcp-server-time/tests/: conftest.py  test_server.py
