[project]
name = "aiomcp-server-time"
description = "Time and timezone conversion MCP server powered by aiomcp"
version = "0.0.1"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "aiomcp",
    "pydantic",
    "tzlocal",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
aiomcp-server-time = "aiomcp_server_time.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
